--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,6 +33,11 @@ a:hover {
     text-decoration: underline;
 }
 
+h1 {
+    color: #e0def4;
+    font-size: 22px;
+}
+
 a {
     text-decoration: none;
     color: #e0def4;
@@ -54,7 +59,7 @@ a {
     border: none;
     font-size: 24px;
     color: #191724;
-    padding-left: 150px;
+    padding-left: 180px;
 }
 
 .left-slide-in-button:hover {
@@ -109,12 +114,11 @@ footer {
 }
 
 .create-new-note {
-    width: 200px;
-    padding-left: 250px;
+    width: 100%;
     padding-top: 100px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 textarea {
@@ -122,6 +126,52 @@ textarea {
     border: none;
     outline: none;
     resize: none;
-    width: 400px;
+    width: 500px;
     height: 250px;
+}
+
+#note-id {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+@media screen and (max-width: 750px) {
+    header {
+        width: auto;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    li, h1 {
+        font-size: 12px;
+    }
+
+    .left-slide-in-button {
+        font-size: 14px;
+    }
+
+    .create-new-note {
+        padding-top: 100px;
+        display: flex;
+        flex-direction: row;
+    }
+
+    textarea {
+        background-color: white;
+        border: none;
+        outline: none;
+        resize: none;
+        width: 150px;
+        height: 200px;
+    }
+
+    .left-slide-in-button {
+        padding-left: 20px;
+    }
+
+    #save-delete {
+        font-size: 12px;
+    }
 }
